# ema

./: .dockerignore  Dockerfile  LICENSE  README.md  database.py  pyproject.toml
modules/: classify_jsons.py  images_fetcher.py  jsons_fetcher.py
notebooks/: README.md  resnet50.ipynb
scraper/: .gitignore  .pylintrc  README.md  cert.pem  database.py  docker-compose.yml
scraper/helpers/: auxiliar.py  constants.py
scraper/modules/: classify_images.py
