[tool.poetry]
name = "ema-project"
version = "0.1.0"
description = ""
authors = ["vagner <vagner.inol@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.20.3"
pynvim = "^0.4.3"
PySide2 = "^5.15.2"
tqdm = "^4.60.0"
requests = "^2.25.1"
click = "^8.0.3"
difPy = "^2.2"
opencv-python = "^4.1.2.30"
opencv-python-headless = "^4.5.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
